--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "most-subject": "^5.3.0",
     "perfect-scrollbar": "^0.7.1",
     "ramda": "^0.24.1",
+    "sugar": "^2.0.4",
     "typestyle": "^1.3.7",
     "union-type": "0.3.3"
   }
